@@ -1,3 +1,3 @@
 #!/bin/sh
-vim -p AndroidManifest.xml data/VERSION src/org/tlhInganHol/android/klingonassistant/KlingonContentDatabase.java CHANGELOG res/values/strings.xml res/values-de/strings.xml
+vim -p AndroidManifest.xml data/VERSION src/org/tlhInganHol/android/klingonassistant/KlingonContentDatabase.java CHANGELOG res/values/strings.xml res/values-de/strings.xml res/values-es/strings.xml
 # ./write_db.sh
